Fixed nav links flex-wrap.

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -19,6 +19,7 @@ h3 {
 
 .header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   position: relative;
